* 2013-09-15 - thorben.betten@open-xchange.com

 - Fix for bug 27882: Remove the "name" parameter an attachment's "Content-Type" header
 - Fix for bug 27959: Lowered log level to "DEBUG" in case an already removed session is supposed to be refreshed/touched

* 2013-09-13 - thorben.betten@open-xchange.com

 - Fix for bug 28683: Removed Exception.printStackTrace() invocation

* 2013-09-13 - marcus.klein@open-xchange.com

 - Fix for bug 28089: Use the same database connection to delete the reminder of the task.

* 2013-09-12 - thorben.betten@open-xchange.com

 - Fix for bug 28828: Consider string length when iterating over its characters
 - Fix for bug 28829: Added null guard when closing IMAP connection

* 2013-09-10 - thorben.betten@open-xchange.com

 - Fix for bug 28786: Honor possibly absent service during runtime
 - Fix for bug 28741: Orderly close opened 'Base64OutputStream'
 
* 2013-09-10 - martin.schneider@open-xchange.com
 
 - Fix for bug 28759, start parsing css with correct matched character

* 2013-09-09 - martin.schneider@open-xchange.com

 - Fix for bug 28261: Command line tool 'createcontext' returns proper information if 'user' parameter is set inadequate.
 - Fix for bug 26693: Return clear error message when folder name is too long.

* 2013-09-09 - thorben.betten@open-xchange.com

 - Fix for bug 28745: User proper charset encoding when generating user's vCard

* 2013-09-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 28734: Upgraded iCal4j library to version 1.0.4. 

* 2013-09-06 - dennis.sieben@open-xchange.com

 - Fix for bug 28736: Now using File.createTempFile for temp files

* 2013-09-05 - martin.herfurth@open-xchange.com

 - Fix for bug 28715: Bad conflict handling on recurrence exception creation.

* 2013-09-06 - dennis.sieben@open-xchange.com

 - Fix for bug 28430: Start a second parser run if the first one doesn't deliver the user database part

* 2013-09-06 - thorben.betten@open-xchange.com
